--- a/Portfolio/templates/includes/navbar.html
+++ b/Portfolio/templates/includes/navbar.html
@@ -5,7 +5,7 @@
         <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'contact' %}">Contact</a></li>
+            <li><a href="{% url 'contactpage' %}">Contact</a></li>
             
         </ul>
     </nav>
